<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="14dp"
            android:text="@string/content_main_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn_spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showToast"
            android:text="@string/spotify_streamer_app_name" />

        <Button
            android:id="@+id/btn_scores_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showToast"
            android:text="@string/scores_app" />

        <Button
            android:id="@+id/btn_library_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showToast"
            android:text="@string/library_app" />

        <Button
            android:id="@+id/btn_build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showToast"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/btn_xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showToast"
            android:text="@string/xyz_reader" />

        <Button
            android:id="@+id/btn_capstone"
            style="@style/button_capstone"
            android:onClick="showToast"
            android:text="@string/capstone_app" />

    </LinearLayout>
</ScrollView>
